modify the baidu status code

--- a/about/index.html
+++ b/about/index.html
@@ -46,7 +46,7 @@
     var _hmt = _hmt || [];
     (function() {
       var hm = document.createElement("script");
-      hm.src = "https://hm.baidu.com/hm.js?064c1d4f7ac966d1a381cf3a3da82c42";
+      hm.src = "https://hm.baidu.com/hm.js?690a1880def257ed540369bff3819b7c";
       var s = document.getElementsByTagName("script")[0];
       s.parentNode.insertBefore(hm, s);
     })();
@@ -362,7 +362,7 @@
 
     <section class="article typo">
       <div class="article-entry" itemprop="articleBody">
-        <p>昵称：布道哥<br>邮箱：<a href="mailto:&#98;&#117;&#108;&#x6c;&#x64;&#x6f;&#x67;&#101;&#x40;&#x31;&#54;&#51;&#x2e;&#99;&#x6f;&#109;">&#98;&#117;&#108;&#x6c;&#x64;&#x6f;&#x67;&#101;&#x40;&#x31;&#54;&#51;&#x2e;&#99;&#x6f;&#109;</a><br>简介:<br>bulldoge，中文名布道哥，布道哥致力于免费传播知识。<br>注意：<br>本网站博文如有文章侵权等行为，请邮件联系我，我会第一时间进行删除处理。</p>
+        <p>昵称：布道哥<br>邮箱：<a href="mailto:&#x62;&#117;&#108;&#108;&#100;&#111;&#x67;&#101;&#x40;&#49;&#x36;&#51;&#x2e;&#x63;&#x6f;&#x6d;">&#x62;&#117;&#108;&#108;&#100;&#111;&#x67;&#101;&#x40;&#49;&#x36;&#51;&#x2e;&#x63;&#x6f;&#x6d;</a><br>简介:<br>bulldoge，中文名布道哥，布道哥致力于免费传播知识。<br>注意：<br>本网站博文如有文章侵权等行为，请邮件联系我，我会第一时间进行删除处理。</p>
 
       </div>
       
